--- a/Front/src/tpl/conversionUpload.html
+++ b/Front/src/tpl/conversionUpload.html
@@ -1,6 +1,7 @@
 <h1 class="setting-title">Conversion upload</h1>
 
 <div class="form-column profile-content conversion">
+  <div class="container">
   <p class="domain-p">
     <i class="material-icons">info_outline</i>
     Please enter one click ID per line. Optionally add payout and transaction ID after commas, for example: <span>c384EFV6JHQODRN70575OK6UG5, 10.0, abc1234</span>
@@ -22,5 +23,6 @@
     <i class="icon-remove"></i>
     close
     </md-button>
+  </div>
   </div>
 </div>
