--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -4,7 +4,7 @@
   A detailed overview of this feature can be found here.</p>
 </h1>
 <div class="form-column bot-blacklist">
-  <div class="bot-blacklist-content event-log clearfix">
+  <div class="container event-log clearfix">
     <div class="form-group bot-select" has-permission="setting.eventLog.selectUser" operation="show">
       <md-select class="cs-subform-select" ng-model="filter.userId">
         <md-option value="ALL">All users</md-option>
