--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -1,7 +1,7 @@
 <h1 class="setting-title">SetUp</h1>
 
 <div class="form-column profile-content">
-  <div class="setUp-page">
+  <div class="container">
     <div class="domain-p">
 
       <p><i class="material-icons">info_outline</i>With Newbidder you don't need to place any PHP code on your landing pages. Visitors are redirected based on data stored in a cookie and referrer.</p>
