--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
+    <link rel="stylesheet" href="assets/css/s-fonts.css"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
     <link rel="stylesheet" href="assets/css/app.css"/>
