--- a/Front/src/tpl/invoices.html
+++ b/Front/src/tpl/invoices.html
@@ -1,7 +1,7 @@
 <h1 class="setting-title">Invoices</h1>
-
 <div class="form-column profile-content subscription invoices">
-  <div class="basic-form clearfix">
+	<div class="container">
+	<div class="basic-form clearfix">
     <div class="col-sm-12 col-md-6">
 			<h3 class="subscription-title">Payment method</h3>
 			<div class="payment-content">
@@ -46,4 +46,5 @@
 			</table>
 		</md-table-container>
 	</div>
+</div>
 </div>
