--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -1,6 +1,6 @@
 <md-dialog class="cs-edit-dialog" ng-cloak>
     <md-toolbar>
-        <div class="md-toolbar-tools">
+        <div class="md-toolbar-tools cam-title">
             <h2 class="md-title">{{ctrl.title | translate}} - {{ctrl.titleType | translate}}</h2>
         </div>
     </md-toolbar>
@@ -12,7 +12,7 @@
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <input type="text" name="name" class="form-control" ng-model="item.name"
                         ng-change="nameChanged()"
                         ng-blur="nameRequired()"
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <input my-text="" type="text" name="url" class="form-control" ng-model="item.url" ng-blur="validateUrl()" required>
                     <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
                     <span ng-show="editForm.url.$error.required">Url is required.</span>
@@ -38,7 +38,7 @@
             </div>
             <div class="url-tokens-row form-group">
                 <label class="col-sm-3 control-label"></label>
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <i>Available URL tokens:</i>
                     <div class="url-tokens">
                         <div class="url-token"
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Number of offers<span class="star-icon">*</span>：</label>
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <input type="text" name="numberOfOffers" class="form-control" ng-model="item.numberOfOffers" required>
                     <span style="color:red" ng-show="editForm.numberOfOffers.$dirty && editForm.numberOfOffers.$invalid">
                     <span ng-show="editForm.numberOfOffers.$error.required">NumberOfOffers is required.</span>
@@ -63,19 +63,19 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
-                <div class="col-sm-8 my-select">
-                    <select class="cs-subform-select" name="country"
+                <div class="col-sm-7 my-select">
+                    <md-select class="cs-subform-select" name="country"
                         ng-disabled="countryInputDisabled"
                         ng-model="item.country"
                         ng-change="countryChanged(item.country)"
                     >
-                        <option value="{{country.value}}" ng-repeat="country in countries">{{country.display}}</option>
-                    </select>
+                        <md-option value="{{country.value}}" ng-repeat="country in countries">{{country.display}}</md-option>
+                    </md-select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Tags：</label>
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
                     <!-- <md-chips
                             ng-model="tags"
@@ -94,9 +94,9 @@
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || saveStatus">{{'save' | translate}}
+        <md-button class="md-primary disabled-btn" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || saveStatus">{{'save' | translate}}
         </md-button>
-        <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
+        <md-button class="md-primary red-btn" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
 
 </md-dialog>
