--- a/Front/src/tpl/referralProgram.html
+++ b/Front/src/tpl/referralProgram.html
@@ -1,9 +1,9 @@
 <h1 class="setting-title">Referral program</h1>
 
 <div class="form-column profile-content">
-  <div class="referral-program">
+  <div class="container">
     <p>Use the below URLs to direct your referrals to either the Newbidder main page or straight to the sign-up page. All sign-ups from these links will be permanently associated with your account. Visitors to these links will have 30 day cookies placed on their computers so you may see delayed referrals. You will be receiving 7% lifetime monthly commissions on all paying referrals, both on their base fees, and overage charges. </p>
-    <p>You can find more info and promo materials here.</p>
+    <p><b>You can find more info and promo materials here :</b></p>
     <div class="form-group referral-group clearfix">
       <div class="row">
       <label class="col-sm-3 control-label">Link to sign up page</label>
@@ -35,7 +35,6 @@
             <td>{{referral.lastactivity}}</td>
             <td>{{referral.recentCommission}}</td>
             <td>{{referral.totalCommission}}</td>
-
           </tr>
         </tbody>
         <tfoot>
