--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -6,33 +6,33 @@
     </li>
   </ul>
 </div>
-
-<div flex layout="column" class="cs-page-content report">
+<div class="cs-action-bar-bg">
+    <h6>Advanced filters:</h6>
     <div class="cs-action-bar clearfix">
         <div class="left-con">
             <div class="cs-subform-control">
-                <select class="cs-subform-select" ng-model="groupBy[0]" placeholder="Choose grouping" ng-change="changeGroupby(0)">
+                <md-select class="cs-subform-select" ng-model="groupBy[0]" placeholder="Choose grouping" ng-change="changeGroupby(0)">
                     <!--<option value="">Choose grouping</option>-->
-                    <option value="{{gb.value}}" ng-repeat="gb in groupByOptions">{{gb.display}}</option>
-                </select>
+                    <md-option value="{{gb.value}}" ng-repeat="gb in groupByOptions">{{gb.display}}</md-option>
+                </md-select>
             </div>
             <div class="cs-subform-control">
-                <select class="cs-subform-select" ng-model="groupBy[1]" ng-disabled="!groupBy[0]" placeholder="Choose Grouping" ng-change="changeGroupby(1)">
-                    <option value="">Choose Grouping</option>
-                    <option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter1">{{gb.display}}</option>
-                </select>
+                <md-select class="cs-subform-select" ng-model="groupBy[1]" ng-disabled="!groupBy[0]" placeholder="Choose Grouping" ng-change="changeGroupby(1)">
+                    <md-option value="">Choose Grouping</md-option>
+                    <md-option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter1">{{gb.display}}</md-option>
+                </md-select>
             </div>
             <div class="cs-subform-control">
-                <select class="cs-subform-select" ng-model="groupBy[2]" ng-disabled="!groupBy[1]" placeholder="Choose Grouping">
-                    <option value="">Choose Grouping</option>
-                    <option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter2">{{gb.display}}</option>
-                </select>
+                <md-select class="cs-subform-select" ng-model="groupBy[2]" ng-disabled="!groupBy[1]" placeholder="Choose Grouping">
+                    <md-option value="">Choose Grouping</md-option>
+                    <md-option value="{{gb.value}}" ng-repeat="gb in groupByOptions | filter:groupbyFilter2">{{gb.display}}</md-option>
+                </md-select>
             </div>
         </div>
         <div class="right-select" ng-class="{'right-select2': datetype == '0'}">
             <div class="cs-subform-control search-con">
                 <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
-                <i class="icon-search md-24" ng-click="applySearch($event)"></i>
+                <i class="search-btn" ng-click="applySearch($event)"></i>
             </div>
             <div class="cs-subform-control">
                 <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
@@ -55,22 +55,22 @@
                     <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
                             ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
-                        {{fromDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                        {{fromDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                     </button>
-                    <select class="cs-subform-select" ng-model="fromTime">
-                      <option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</option>
-                    </select>
+                    <md-select class="cs-subform-select " ng-model="fromTime">
+                        <md-option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</md-option>
+                    </md-select>
                 </div>
                 <label class="cs-subform-label">{{'toDate' | translate}}：</label>
                 <div class="cs-subform-control">
                     <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
                             ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
-                        {{toDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                        {{toDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                     </button>
-                    <select class="cs-subform-select" ng-model="toTime">
-                      <option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</option>
-                    </select>
+                    <md-select class="cs-subform-select" ng-model="toTime">
+                        <md-option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</md-option>
+                    </md-select>
                 </div>
             </div>
 
@@ -82,10 +82,10 @@
                     <md-option value="2">All</md-option>
                 </md-select>
             </div>
-            <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applySearch($event)" translate>apply</md-button>
+            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch($event)" translate>apply</md-button>
 
-            <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="editItem($event)" translate>add</md-button>
-            <div class="view_column" ng-click="viewColumnClick()">
+            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
+            <div class="view_column blue-btn" ng-click="viewColumnClick()">
                 <div class="view_column_con" ng-show="viewColumnIsShow">
                     <ul class="view_column_list">
                         <li ng-repeat="item in columns | filter:filterColumns" ng-click="checkboxIsChecked($event, item.key)">
@@ -93,12 +93,12 @@
                         </li>
                     </ul>
                     <div class="my-btn">
-                        <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange($event)">
+                        <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applyChange($event)">
                             <i class="icon-ok"></i>
                             {{'apply changes' | translate}}
                         </md-button>
 
-                        <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose($event)">
+                        <md-button class="md-raised md-primary cs-compact cs-add-button red-btn"  ng-click="viewCloumnClose($event)">
                             <i class="icon-remove"></i>
                             {{'close' | translate}}
                         </md-button>
@@ -109,6 +109,8 @@
             </div>
         </div>
     </div>
+</div>
+<div flex layout="column" class="cs-page-content report">
 
     <md-table-container>
         <table md-table multiple ng-model="selected" md-progress="promise">
