--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -1,7 +1,8 @@
 <h1 class="setting-title">Subscriptions</h1>
 
 <div class="form-column profile-content subscription">
-  <div class="basic-form clearfix">
+	<div class="container">
+		<div class="basic-form clearfix">
     <div class="col-sm-12 col-md-6">
 		  <h3 class="subscription-title">Current billing statistics</h3>
   		<div class="table-out">
@@ -70,6 +71,7 @@
       </div>
     </div>
   </div>
+	</div>
 </div>
 
 <!-- Google Code for free plan Conversion Page -->
